# interfaceAgent

./: .gitignore  BETA_READINESS.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  docker-compose.yml  test_report_progress.txt
.github/workflows/: backend.yml  frontend.yml
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  setup.py
backend/alembic/: env.py
backend/alembic/versions/: __init__.py
backend/app/: main.py
backend/app/agents/: base_agent.py  plugin_loader.py  registry.py
backend/app/api/: admin.py  agents.py  audit_logs.py  auth.py  deps.py  pipelines.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  agent.py  base.py  event.py  user.py
backend/app/services/: anomaly_detection.py  audit.py  event_bus.py  pii_redaction.py
backend/tests/: conftest.py  test_agents.py
docs/: developer-guide.md
docs/api/: README.md
docs/deployment/: README.md
docs/user-guide/: USER_MANUAL.md
frontend/: .gitignore  package.json
frontend/public/: index.html
frontend/src/: App.js  index.css
frontend/src/components/: Admin.js  Agents.js  AuditLogs.js  Dashboard.js  Login.js  Monitoring.js  Pipelines.js
frontend/src/contexts/: AuthContext.js
frontend/src/services/: api.js
scripts/: demo_setup.py
